--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -75,7 +75,7 @@
 
   .modal-container {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
   }
   .modal-flex-1 {
     position: relative;
