--- a/src/components/ContactMap/contact-map.scss
+++ b/src/components/ContactMap/contact-map.scss
@@ -22,9 +22,8 @@
 
 #map-text{
   text-align: center;
-  font-weight: 400;
   padding: 150px 0;
   font-family: "Bebas Neue", "Helvetica", "Arial";
-  font-size: 24px;
-  color: $melon;
+  font-size: 21px;
+  color: white;
 }
