Added map link (not active yet)

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -90,6 +90,11 @@
       padding-right: 10%;
       padding-left: 10%;
     }
+    .map-link {
+      margin-top: 1em;
+      color: blue;
+      text-decoration: underline;
+    }
   }
   .modal-flex-2 {
     width: 60%;
