--- a/src/components/MatchingSection/MatchingSection.scss
+++ b/src/components/MatchingSection/MatchingSection.scss
@@ -4,6 +4,44 @@
 .questions {
     margin: 0px 10px 275px 10px;
     
+    .matching-question {
+        text-align: center;
+        
+    }
+
+    .slider {
+        -webkit-appearance: none;
+        width: 100%;
+        height: 10px;
+        border-radius: 5px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+      }
+      
+      .slider:hover {
+        opacity: 1;
+      }
+      
+      .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 23px;
+        height: 24px;
+        border: 0;
+        background: $melon;
+        cursor: pointer;
+      }
+      
+      .slider::-moz-range-thumb {
+        width: 23px;
+        height: 24px;
+        border: 0;
+        background: $melon; //url('../../../content/assets/MatchingLogo.png');
+        cursor: pointer;
+      }
 
     .trycontainer {
         margin-top: 30px;
