Solved lacking exhib data bug, some css modifications

--- a/src/components/Maps/maps.scss
+++ b/src/components/Maps/maps.scss
@@ -52,11 +52,11 @@
 	font-weight: bold;
 }
 
-.map-link {
+vyer-link {
 	padding: 30px 30px 30px 30px;
 }
 
-.map-link a {
+vyer-link a {
 	color: $licorice !important;
 	&:hover {
 		color: black !important;
