--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -27,7 +27,7 @@
    width: 60%;
    padding-left: 1em;
   }
-.event-item .details-section .name{
+.event-item .details-section .event-name{
     text-align: left;
     padding: 0.1em 0em 0.1em 0em;
   }
@@ -52,8 +52,9 @@
 .event-item:hover {
   cursor: pointer;
   cursor: hand;
-  .name{
+  .event-name {
     text-decoration: underline;
+
   }
 }
 .comingEvents{
@@ -152,7 +153,7 @@
   .events-feed {
     padding: 0%;
   }
-  .event-item .details-section .name{
+  .event-item .details-section .event-name{
     text-align: center;
   }
   .event-item .details-section{
@@ -170,8 +171,8 @@
       font-size: $text-standard-mobile;
     }
   }
-  .event-item .details-section .name{
-    font-size: 1em;
+  .event-item .details-section .event-name{
+    font-size: 1.5em;
   }
   .event-item .details-section .event-property p{
       font-size: $text-standard-mobile;
