--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -330,9 +330,31 @@ a:hover {
     }
 }
 
+.event-picture {
+  padding-top: 0.5em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+}
+
 @media screen and (max-width: $breakpoint-ipad) {
   .modalcontent .modal-property-event{
     padding: 1em 0em 1em 2.5em;
+    margin-bottom: 2em;
   }
 
+  .event-picture {
+    max-width: 40%;
+  }
+}
+
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+  .event-picture {
+    max-width: 50%;
+  }
+
+  .event-info {
+    font-size: 2em !important;
+  }
 }
