--- a/src/components/Maps/maps.scss
+++ b/src/components/Maps/maps.scss
@@ -18,7 +18,7 @@
 }
 
 .map-item {
-		width:20em;
+	width:20em;
     display: flex;
     flex-direction: column;
     cursor: pointer;
@@ -77,6 +77,51 @@
 	pointer-events: auto;
 }
 
+.map-instructions {
+	background-color: $melon;
+	color: white;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	margin-bottom: 1em;
+	margin-left: 10%;
+	width: 80%;
+}
+
+.map-inst-header {
+	text-decoration: underline;
+}
+
+.map-inst-header, .map-steps {
+	color: white;
+	padding: 0.1em;
+	font-weight: normal;
+}
+
+.vyer-icon-container {
+	text-align: center;
+	margin-bottom: 1em;
+}
+
+.vyer-icon {
+	margin-top: 0.5em;
+	max-width: 12%;
+}
+
+.map-icon-container {
+	text-align: center;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
+.mobile-map-icon {
+	max-width: 50%;
+}
+
 
 @media screen and (max-width: $breakpoint-mobile-flipped) {
+
+	.vyer-icon {
+		max-width: 50%;
+	}
+
 }
