--- a/src/components/Cat/cat.scss
+++ b/src/components/Cat/cat.scss
@@ -123,6 +123,9 @@ $tail-interval: (11 - 7.5) / $tail-wags;
 @include effect('right-ear', $k-right-ear);
 
 
+#test {
+  margin-top: 3.5em;
+}
 
 .main{
   height: 200px;
@@ -143,7 +146,7 @@ $tail-interval: (11 - 7.5) / $tail-wags;
     height: 50px;
     position: absolute;
     top: calc(50% - 50px);
-    right: 75px;
+    right: -75px !important;
     border-top-left-radius: 50px * 2;
     border-top-right-radius: 50px * 2;
     // animation: body $duration none infinite;
