Added pdf:s and changed sustainability and about pages

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,10 @@ body {
   color: $diversity;
 }
 
+#sustainability-color {
+  color: $melon;
+}
+
 .body {
   // TODO: this class needs to be renamed
   max-width: 850px;
