--- a/src/components/MatchingSection/MatchingSection.scss
+++ b/src/components/MatchingSection/MatchingSection.scss
@@ -6,34 +6,70 @@
 
 #prev {
   border-radius: 5px;
-  left: 5vw;
   float: left;
-  margin-left: 5vw;
+  margin-left: 4px;
 }
 
 #next {
   border-radius: 5px;
-  // right: 2vw;
   float: right;
-  margin-right: 5vw;
+  margin-right: 5px;
 }
 
 #start-btn {
   align-self: center;
-  // right: 20%;
-  // bottom: 20px;
+}
+
+.question-card-wrapper {
+  
+  width: 50%;
+  margin-top: 2%;
+  margin-left: 25%;
+  padding: 2%;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+  @media only screen and (max-width: 600px){
+    width: 100%;
+    margin-left: 0;
+    padding: 0;
+    box-shadow: 0 0 0 0;
+  }
+
+  .question-index {
+    width: 6vh;
+    margin-left: 1px;
+    border-radius: 5px;
+    z-index: -1;
+    flex-direction: row;
+    height: 4vh;
+    text-align: center;
+    background: $melon;
+    justify-content: center;
+
+    .index-value {
+      color: white;
+      font-size: 3vh;
+      font-weight: bold;
+    }
+  }
+  .question-content {
+    margin: 0 0 0% 0;
+  }
+
+  .nav-btns {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .questions {
-    margin: 0px 10% 22% 10%;
+    margin: 0px 0% 32% 0%;
     
     p {
       text-align: center;
       padding-bottom: 4px;
     }
     button {
-      // align-self: baseline;
-      // position: absolute;
       bottom: 10px;
       width: 15vw;
       max-height: 12vw;
@@ -49,25 +85,20 @@
 
     .matching-question-card {
         text-align: center;
-        // width:0%;
-        // overflow:hidden;
-        // -webkit-transition: width 1s ease-in-out;
-        // -moz-transition: width 1s ease-in-out;
-        // -o-transition: width 1s ease-in-out;
-        // transition: width 1s ease-in-out;
-        // width: 100%;
+    }
+    @media screen and (max-width: 1000px) {
+      .question-header {
+         font-size: 3.5vw;
+         padding-bottom: 5px;
+         padding-top: 5px;
+      }
     }
 
-    // .matching-question-card {
-    //   width: 60%;
-    //   left: 50%;
-    //   justify-items: center;
-    // }
     
 
     .slider {
         -webkit-appearance: none;
-        width: 60vw;
+        width: 100%;
         height: 10px;
         border-radius: 5px;
         background: #d3d3d3;
