--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 $font-regular: 'Lato', sans-serif;
