--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -67,7 +67,7 @@
 
 @media screen and (max-width: 1200px) {
   #navbar{
-      pointer-events: none;
+      //pointer-events: none;
       font-size: 1.2em;
   }
 }
