Made image of the faq-page undraggable and made the page visible on the navbar

--- a/src/components/FAQ/index.scss
+++ b/src/components/FAQ/index.scss
@@ -143,7 +143,12 @@ homepage .parent:first-child > h2 {
     width:50%; 
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 @media screen and (max-width: 600px) {
