--- a/src/components/CountdownComponent/countdown.scss
+++ b/src/components/CountdownComponent/countdown.scss
@@ -5,6 +5,8 @@
     color: #fff;
     z-index: 2;
     width: 500px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .countdown-width-container {
