fixed mobile menu bug

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -82,7 +82,8 @@
             width: 100%;
             
             .visible {
-              height: 100vh;
+              max-height: 200vh;
+              margin-top: -1.5em;
             }
 
             .menu-hamburger{
