Moved testimonials and moved photogallery title into the component

--- a/src/components/PhotoGallery/photo-gallery.scss
+++ b/src/components/PhotoGallery/photo-gallery.scss
@@ -40,3 +40,8 @@
 .square:hover .photo-info {
     opacity: 1;
 }
+
+#gallerytitle {
+    border-bottom: 1px solid #00d790;
+    margin-bottom: 40px;
+}
