--- a/src/components/MatchingSection/MatchingSection.scss
+++ b/src/components/MatchingSection/MatchingSection.scss
@@ -24,6 +24,7 @@
   
   width: 50%;
   margin-top: 2%;
+  border-radius: 20px;
   margin-left: 25%;
   padding: 2%;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
@@ -63,7 +64,7 @@
 }
 
 .questions {
-    margin: 0px 0% 32% 0%;
+    margin: 0px 0% 3% 0%;
     
     p {
       text-align: center;
