Changed to clearer Select text and limit Select menu list height

--- a/src/components/MatchingSection/MatchingSection.scss
+++ b/src/components/MatchingSection/MatchingSection.scss
@@ -35,6 +35,10 @@
     box-shadow: 0 0 0 0;
   }
 
+  .select__menu-list {
+    max-height: 195px !important;
+  }
+
   .question-index {
     width: 6vh;
     margin-left: 1px;
