Added fair_location text to each exhibitor

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -421,6 +421,12 @@
 .armadaConfetti {
 
 }
+
+#fair-location {
+  color: black !important;
+  font-size: 0.8em;
+}
+
 .supercontainer{
   width:100%;
   text-align: center;
