1173278809292225_change_testimonials - Changed testimonials for 2020 year

--- a/src/components/Testimonials/testimonials.scss
+++ b/src/components/Testimonials/testimonials.scss
@@ -49,6 +49,10 @@
     color: white;
 }
 
+q { quotes: '\201c' '\201d'; }
+q:before { content: open-quote; }
+q:after  { content: close-quote; }
+
 .testimonials {
     background-color: rgb(45,45,45);
     color: $melon;
