Update FAQ to show elements in answers

--- a/src/components/FAQ/index.scss
+++ b/src/components/FAQ/index.scss
@@ -207,6 +207,10 @@ homepage .parent:first-child > h2 {
     overflow: hidden;
 }
 
+.children a {
+    color: $diversity;
+}
+
 .answer {
     font-size: 1.0rem;
     font-weight: 450;
