--- a/src/layouts/Career/index.scss
+++ b/src/layouts/Career/index.scss
@@ -1,2 +1,7 @@
 @import "../../styles/global";
 @import "../../styles/_variables";
+
+.career {
+    display: flex;
+    justify-content: center;
+}
