--- a/src/components/Newsfeed/newsfeed.scss
+++ b/src/components/Newsfeed/newsfeed.scss
@@ -14,16 +14,14 @@
         }
     }
 
+    p {
+        text-align: initial;
+    }
+
 }
 
 blockquote {
     margin: 0em 0em;
-}
-
-.newsitem.regular {
-    min-height: 100%;
-    //display: flex;
-    //flex-direction: row;
 }
 
 .armada-news {
@@ -38,7 +36,6 @@ blockquote {
 
 @media screen and (max-width: $breakpoint-mobile) {
     .newsfeed {
-       margin: 3em 0em 6em 0em;  // nytt
         ul {
             li {
                 //margin: 3em 0em;
