--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -2,69 +2,11 @@
 @import "../../styles/_fonts";
 
 
-img {
-        max-width: 100%;
-        height: auto;
-}
-
-.preview-content {
-    flex-grow: 1;
-    margin: 0;
-    padding: 1em 1em 0.5em 1em;
-
-    a ~ h1:hover,h2:hover {
-        text-align: left;
-        text-decoration: underline;
-    }
-    h1,h2 {
-        text-align: left;
-        font-size: 1.2em; 
-      
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        line-clamp: 2;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        
-    @media screen and (max-width: $breakpoint-mobile) {
-        
-        line-clamp: 1;
-        -webkit-line-clamp: 1;
-    }
-    }
-}
-
-.ingress, .description {
-    font-size: 1rem;
-    margin-top: 1em 0em;
-    
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-
-    @media screen and (max-width: $breakpoint-mobile) {
-        
-        line-clamp: 1;
-        -webkit-line-clamp: 1;
-    }
-}
-.ingress:hover {
-  text-decoration: none;
-}
-.newsitem {
-    padding-bottom: 5px;
-}
-.newsitem.regular {
-    //margin: 2em 0em;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
-
+.news-item {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
 
     .image-container {
         position: relative; 
@@ -72,43 +14,73 @@ img {
         padding-bottom: 58%;
         background-size: cover;
         flex-grow: 1;
+
+        .news-item-datesection {
+            position: absolute;
+            right: 0;
+            background: rgba($melon, 0.8);
+            border-radius: 0 0 0 50%;
+            padding: 0.8em;
+            color: #fff;
+            font-family: $font-title;
+            text-align: center;
+            
+            box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
+        }
+
+        .news-item-category {
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            background: $melon;
+            padding: 0.2rem 1rem;
+            color: #fff;
+            font-family: $font-title;
+        }
     }
-    .regular-news-link {
+
+    .preview-content {
+        flex-grow: 1;
+        margin: 0;
+        padding: 1em 1em 0.5em 1em;
+
+        p {
+            text-align: initial;
+        }
+    
+        a ~ h1:hover,h2:hover {
+            text-align: left;
+            text-decoration: underline;
+        }
+
+        h1,h2 {
+            text-align: left;
+            font-size: 1.2em; 
+          
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            line-clamp: 2;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+
+        .ingress, .description {
+            font-size: 1rem;
+            margin-top: 1em 0em;
+            
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            line-clamp: 2;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+    }
+
+    .news-link {
         padding: 0 0 1em 1em;
         font-size: 1rem;
     }
-}
-
-
-.newsitem.featured {
-    margin: 0em 0em;
-	.preview-content {
-		margin: 0em 0em 3em 0em;
-	}
-    img {
-		margin-bottom: 1em;
-        width: 100%;
-        object-fit: cover;
-    }
-}
-
-.newsitem-datesection {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background: $melon;
-    border-radius: 50%;
-    padding: 0.2rem 1.2rem;
-    color: #fff;
-    font-family: $font-title;
-    text-align: center;
-}
-.newsitem-category {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: #00d790;
-    padding: 0.2rem 1rem;
-    color: #fff;
-    font-family: $font-title;
+    
 }
