--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -8,6 +8,10 @@
     justify-content: space-around;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
 
+    @media screen and (max-width: $breakpoint-mobile) {
+        width: 80vw;
+    }
+
     .image-container {
         position: relative; 
         height: 0;
@@ -20,11 +24,13 @@
             right: 0;
             background: rgba($melon, 0.8);
             border-radius: 0 0 0 50%;
-            padding: 0.8em;
+            padding: 0.8em 0.5em 0.8em 0.8em;
             color: #fff;
             font-family: $font-title;
             text-align: center;
-            
+            width: 3em;
+            height: 2em;
+            font-size: 0.8em;
             box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.1);
         }
 
@@ -43,6 +49,7 @@
         flex-grow: 1;
         margin: 0;
         padding: 1em 1em 0.5em 1em;
+        height: 6em;
 
         p {
             text-align: initial;
@@ -63,6 +70,7 @@
             line-clamp: 2;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+        
         }
 
         .ingress, .description {
