--- a/src/components/PagePreview/preview.scss
+++ b/src/components/PagePreview/preview.scss
@@ -49,7 +49,7 @@
         flex-grow: 1;
         margin: 0;
         padding: 1em 1em 0.5em 1em;
-        height: 6em;
+        height: 6.5em;
 
         p {
             text-align: initial;
@@ -74,14 +74,14 @@
         }
 
         .ingress, .description {
-            font-size: 1rem;
+            font-size: 0.85em;
             margin-top: 1em 0em;
             
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
-            line-clamp: 2;
-            -webkit-line-clamp: 2;
+            line-clamp: 3;
+            -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
         }
     }
