--- a/src/components/CareerAccordion/index.scss
+++ b/src/components/CareerAccordion/index.scss
@@ -21,6 +21,21 @@
             flex: 0.8;
         }
 
+        .job-header {
+            
+            
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-content: center;
+            height: 100%;
+
+            
+            @media screen and (max-width: $breakpoint-mobile) {
+                height: auto;
+            }
+        }
+
         h4, h5 {
             color: $licorice;
             text-align: left;
@@ -42,15 +57,32 @@
             vertical-align: -0.1875em;
         }
 
-        .chips {
-            padding-top: 0.5em;
+        .company-logo {
 
-           .chip {
-                margin-left: -0.2em;
-                margin-right: 0.6em;
-           }
-            
+            img {
+                max-height: 3rem;
+                max-width: 8rem;
+            }
+
+            @media screen and (min-width: $breakpoint-mobile) {
+                display: flex;
+                float: left;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+                padding: 0 1em;
+                width: 6rem;
+                min-height: 3.5rem;
+                margin-left: -1em;
+                
+                img {
+                    max-height: 4rem;
+                    max-width: 6rem;
+                }
+            }
+
         }
+
 
         .arrow {
             height: 0.5rem;
@@ -78,6 +110,18 @@
             flex-direction: column;
             justify-content: space-between;
             padding: 0 0 1rem 0;
+
+            
+
+        .chips {
+
+            padding: 1rem 1rem 0 1rem;
+           .chip {
+                margin-left: -0.2em;
+                margin-right: 0.6em;
+           }
+            
+        }
 
             .job-info {
                 flex: 1;
