--- a/src/components/ContactCard/index.scss
+++ b/src/components/ContactCard/index.scss
@@ -8,13 +8,16 @@
   height: 300px;
   border-radius: 40px;
   box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  cursor: pointer;
   transition: 0.4s;
 
   &:hover {
     transform: scale(0.9, 0.9);
     box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
       -5px -5px 30px 15px rgba(0,0,0,0.22);
+  }
+  
+  p {
+    margin: 0;
   }
 
   .card-image {
