--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/_variables";
-@import "../../styles/_fonts";
+@import '../../styles/_variables';
+@import '../../styles/_fonts';
 
 .hamburger{
   display: block;
@@ -33,8 +33,6 @@
   .menu-wrapper {
     background-color: $licorice;
     width : 100%;
-    //border-bottom-left-radius: 10px;
-    //border-bottom-right-radius: 10px;
     display: inline-block;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -56,9 +54,7 @@
           border-right: 1px solid white !important;
         }
       }
-      .active-page {
-        //color: $melon !important;
-      }
+
       a:last-child{border-right: 0 !important;}
     }
   }
@@ -67,7 +63,6 @@
 
 @media screen and (max-width: 1200px) {
   #navbar{
-      //pointer-events: none;
       font-size: 1.2em;
   }
 }
@@ -109,12 +104,7 @@
                 text-align: center;
                 line-height: 1.8;
                 font-size: 1.5em;
-                .active-page {
-                  //color: black !important;
-                  &:hover{
-                    //color: black !important;
-                  }
-                }
+
                 a {
                     color: white !important;
                     border-right: none !important;
