--- a/src/components/FAQ/index.scss
+++ b/src/components/FAQ/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/_variables";
-@import "../../styles/global";
+@import '../../styles/_variables';
+@import '../../styles/global';
 
 .faq-content-body {
     position: relative;
@@ -187,7 +187,7 @@ homepage .parent:first-child > h2 {
 
 .hcfe h1, .hcfe h2, .hcfe h3, .hcfe h4, .hcfe h5 {
     color: #202124;
-    font-family: "Bebas Neue", Helvetica, Arial;
+    font-family: 'Bebas Neue', Helvetica, Arial;
     font-weight: 400;
 }
 
@@ -217,7 +217,7 @@ homepage .parent:first-child > h2 {
     line-height: 1.2rem;
     display: inline-block;
     padding: 1rem 2rem 1rem 2rem;
-    
+    margin: 0;
 }
 
 .category-header {
