--- a/src/components/Sustainability/index.scss
+++ b/src/components/Sustainability/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/global";
-@import "../../styles/_variables";
+@import '../../styles/global';
+@import '../../styles/_variables';
 
 .background_Images {
   padding: 1em;
