--- a/src/components/Testimonials/index.scss
+++ b/src/components/Testimonials/index.scss
@@ -1,5 +1,6 @@
-@import "../../styles/_variables";
-@import "../../styles/global";
+
+@import '../../styles/_variables';
+@import '../../styles/global';
 
 .flex-container {
     display: flex;
