--- a/src/components/Recruitment/index.scss
+++ b/src/components/Recruitment/index.scss
@@ -1,4 +1,5 @@
-@import "../../styles/_variables";
+
+@import '../../styles/_variables';
 @import "../../styles/_fonts";
 
 
@@ -47,7 +48,7 @@
     margin-bottom: 2%;
     }
 
-  .applysection{
+  .apply-section{
     margin:auto;
     text-align: center;
     background: white;
@@ -55,12 +56,6 @@
     border-bottom: solid $text-color-light;
     border-width: thin;
   }
-
-
-  .role-container{
-
-  }
-
 
 .role-header{
     cursor: pointer;
