--- a/src/components/SustainabilityInterviews/index.scss
+++ b/src/components/SustainabilityInterviews/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/global";
-@import "../../styles/_variables";
+@import '../../styles/global';
+@import '../../styles/_variables';
 
 .card_Image {
   border-radius: 25px;
