--- a/src/layouts/Matching/index.scss
+++ b/src/layouts/Matching/index.scss
@@ -1,5 +1,5 @@
-@import "../../styles/global";
-@import "../../styles/_variables";
+@import '../../styles/global';
+@import '../../styles/_variables';
 
 .aboutpage-container {
 	padding-top: 3em;
