Rewrite Jumbotron, change layout dir, set Netlify branch to master

--- a/src/layouts/News/news.scss
+++ b/src/layouts/News/news.scss
@@ -19,7 +19,7 @@
 
     .ingress {
         font-size: 1.2em;
-        text-align: justify;
+        text-align: unset;
         font-style: italic;
     }
 }
